testdata/baselines/reference/submodule/compiler/moduleResolution_relativeImportJsFile.errors.txt
/src/a.ts(1,20): error TS2307: Cannot find module './b' or its corresponding type declarations.


==== /src/a.ts (1 errors) ====
    import * as b from "./b";
                       ~~~~~
!!! error TS2307: Cannot find module './b' or its corresponding type declarations.
    
==== /src/b.js (0 errors) ====
    export const x = 0;
    